# ytstenut__ytstenut-plugins

./: .gitignore  Android.mk  Makefile.am  autogen.sh  configure.ac
gabble/: Makefile.am  message-channel.c  message-channel.h  status.c  status.h
mission-control/: Makefile.am  mcp-account-manager-ytstenut.c  mcp-account-manager-ytstenut.h  mission-control-plugin.c
plugin-base/: Makefile.am  caps-manager.c  caps-manager.h  channel-manager.c  channel-manager.h  utils.c  utils.h  ytstenut.c
salut/: Makefile.am  caps-manager.c  caps-manager.h  channel-manager.c  channel-manager.h  message-channel.c  message-channel.h  plugin.c  plugin.h  status.c  status.h  util.c  util.h  utils.h  ytstenut-plugin.c  ytstenut-plugin.h  ytstenut.c  ytstenut.h
src/: Makefile.am  plugin.h
tests/: Makefile.am
tests/twisted/: Makefile.am  README  avahimock.py  avahitest.py  caps_helper.py  constants.py  gabblecaps_helper.py  gabbleservicetest.py  gabbletest.py  mcconstants.py  mctest.py  salutservicetest.py  saluttest.py  servicetest.py  xmppstream.py  yconstants.py
tests/twisted/gabble/: hct.py  message.py  service.py  sidecar.py  slow-service.py  status.py  success.py
tests/twisted/mission-control/: account.py
tests/twisted/salut/: hct.py  message.py  service.py  slow-service.py  status.py
tests/twisted/telepathy/managers/: salut.manager
tests/twisted/tools/: Makefile.am  exec-with-log.sh.in  gabble-exec-with-log.sh.in  org.freedesktop.Telepathy.ConnectionManager.gabble.service.in  org.freedesktop.Telepathy.ConnectionManager.salut.service.in  org.freedesktop.Telepathy.MissionControl5.service.in  salut-exec-with-log.sh.in
tests/twisted/ytstenut/: account.py  sidecar.py
